--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Anthony Moreno",
   "license": "ISC",
+  "engines": {
+    "node": "12.6.3"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
